# local_ai_search

./: .gitignore  README.md  config.ini  pyproject.toml
.github/workflows/: tests.yml
docs/: answer-quality-rubric.md  architecture-boundaries.md  decisions.md  dependencies.md  evidence.md  startup.md  todo-list.md
scripts/: ai_status.sh
scripts/tests/: run_all.sh
src/local_ai/: __init__.py  cli.py  config.py  content_window.py  doctor.py  fs.py  log.py  memory.py  output.py  paths.py  profile.py  runtime.py  schemas.py  shell.py  tools.py  web.py  workspace.py
src/local_ai/test/: test_config.py  test_debug_cli.py  test_doctor_cli.py  test_fs_cli.py  test_migrate_cli.py  test_paths.py  test_profile_cli.py  test_repair_cli.py  test_shell_cli.py  test_status_cli.py  test_summarize_cli.py  test_workspace.py
src/local_ai_search/: artifacts.py  cli.py  config.py  evidence.py  evidence_accounting.py  evidence_sources.py  filesystem_evidence.py  filesystem_policy.py  filesystem_walk.py  intent_gate.py  logging.py  navigation.py  output.py  paths.py  pipeline.py  session_evidence.py  workspace_evidence.py
src/local_ai_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/local_ai_search/adapters/: local_ai.py  local_search.py  subprocesses.py
src/local_ai_search/api/: app.py  errors.py  middleware.py  routes.py  schemas.py
src/local_ai_search/test/: test_api.py  test_artifacts.py  test_cli.py  (+18 more)
src/local_search/: artifacts.py  cli.py  config.py  ingest.py  log.py  output.py  paths.py  retrieval.py  storage.py  text.py  web_search.py
(+24 files in other folders)
