[project]
name = "local-ai-search"
version = "0.1.0"
description = "Explicit integration boundary between local_ai and local_search"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
local-ai-search = "local_ai_search.cli:main"

[tool.pytest.ini_options]
testpaths = ["src/local_ai_search/test"]
pythonpath = ["src"]
